feat: new auth middleware
